# yescity_recommendation_ai

./: README.md  main.py  main1.py  pyproject.toml  requirements.txt  test_parser.py
src/yescity_recommendation_ai/: crew.py  main.py
src/yescity_recommendation_ai/api/: routes.py  schemas.py
src/yescity_recommendation_ai/config/: settings.py
src/yescity_recommendation_ai/config/agents/: food_critic.yaml  shopping_guide.yaml
src/yescity_recommendation_ai/config/tasks/: food_recommendation.yaml  shopping_recommendation.yaml
src/yescity_recommendation_ai/crew/: crew_manager.py  crew_output_parser.py  yaml_loader.py
src/yescity_recommendation_ai/database/: mongodb_client.py
src/yescity_recommendation_ai/services/: query_classifier.py  recommendation_service.py
src/yescity_recommendation_ai/tools/: base_tool.py  food_tools.py  shopping_tools.py
src/yescity_recommendation_ai/utils/: logger.py
tests/: test_ollama.py  test_query_classifier.py
